# MV_creator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
remotion/: package-lock.json  package.json
remotion/src/: MVTimelineVideo.tsx  Root.tsx  ShotScene.tsx  VimaxTimelineVideo.tsx
src/mv_creator/: __init__.py  agents.py  cli.py  models.py  pipeline.py  providers.py  rag.py  renderers.py  schemas.py  timeline.py  web_app.py
src/mv_creator/templates/: base.html  home.html  music.html  project.html  references.html  shots.html
tests/: test_pipeline.py
