[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mv-creator"
version = "0.1.0"
description = "AI-powered Music Video creation tool"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "google-genai>=1.0",
    "jinja2>=3.0",
    "pillow>=10.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
mv-creator = "mv_creator.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
